Adjust and portion the flexbox divisions
Adjust the targetting mechanism, switched from ID
to classes so that the same line of code will not
have to be applied to every single section.

Change the overall flexbox container to have a
downward direction to build a top down webpage
design.

Portion the sizes of the total screen.
Take the dimensions from the Odin Project
project reference image and change the dimensions
to accomodate a full 1920 pixel display while
keeping the same ratio.

Portion the main flexbox container in accordance
with the reference image, largest division at the
top and the divisions gradually decrease in height
as the page goes down.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
     /* height of the body will never be less than 100% of the viwport height */
     min-height: 100vh;
+    height: 2550px;
 
     /* make entire body a flex box */
     display: flex;
@@ -17,21 +18,29 @@ body {
 }
 
 .section-container{
+    /* allowing dynamic resizing */
+    display: flex;
+    flex: 1; 
+    flex-direction: column;
 
 }
 
-#section1{
+.section{
+    display: flex;
+}
 
+.section1{
+    flex: 5;
 }
-#section2{
-    
+.section2{
+    flex: 4;
 }
-#section3{
-    
+.section3{
+    flex: 3;
 }
-#section4{
-    
+.section4{
+    flex: 2;
 }
-#section5{
-    
+.section5{
+    flex: 1;
 }
