--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     display: flex;
     /* ensuring that entire body will be able to shrink and grow evenly */
     flex: 1;
+    margin: 0;
+    padding: 0;
 }
 
 .section-container{
@@ -27,10 +29,13 @@ body {
 
 .section{
     display: flex;
+    
 }
 
+/* aka Hero Section of webpage */
 .section1{
     flex: 5;
+    background-color:#1F2937
 }
 .section2{
     flex: 4;
@@ -43,4 +48,31 @@ body {
 }
 .section5{
     flex: 1;
+}
+
+
+.header-section1{
+    display: flex;
+    height: 80px;
+    flex: 1;
+    padding: 24px 244px;
+    font-size: 24px;
+    justify-content: space-between;
+    align-items: center;
+    color: #F9FAF8;
+}
+
+/* For the links in header-section1 */
+ul{
+    list-style-type: none;
+    display: flex;
+    gap: 24px;
+    
+
+}
+
+a{
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 24px;
 }
